# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.216 2005/04/11 20:05:40 rocket Exp $

  11 Apr 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py, modules/livecd_stage1_target.py,
  modules/livecd_stage2_target.py, modules/stage4_target.py,
  targets/livecd-stage1/livecd-stage1-controller.sh,
  targets/livecd-stage2/livecd-stage2-controller.sh,
  targets/stage4/stage4-controller.sh, +targets/stage4/unmerge.sh,
  targets/support/functions.sh, targets/support/kmerge.sh,
  targets/support/livecdfs-update.sh, +targets/support/rc-update.sh:
  Generalized kernel support, fsscript, rcupdate, etc for stage4

  09 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/pre-kmerge.sh:
  Removed sed for usb devices from legacy genkernel, as we're going to require
  a version much higher that no longer exhibits the bug.

  08 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  examples/gamecd.conf.example, -targets/support/gamecdfs-update.sh,
  targets/support/livecdfs-update.sh:
  Removed empty gamecdfs-update.sh, updated livecdfs-update.sh to work
  properly with hotplug firmwares, and also updated gamecd.conf.example, since
  the ut2004demo shell script has been renamed to ut2004-demo.

  08 Apr 2005; Eric Edgar <rocket@gentoo.org> targets/support/pre-kmerge.sh:
  let genkernel always reinstall itself

  07 Apr 2005; Eric Edgar <rocket@gentoo.org> catalyst,
  modules/catalyst_support.py, modules/generic_stage_target.py,
  modules/stage1_target.py, targets/support/livecdfs-update.sh:
  fix case bug in livecdfs-update.sh; fix bug in initial command line
  arguement parsing; add cflags spec file support which is only allowed to
  override in stage1

  07 Apr 2005; Eric Edgar <rocket@gentoo.org>
  targets/stage3/stage3-chroot.sh:
  Fix a use flag bug in the stage3
